add jquery, js folder

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <button id="toggleState"></button>
-  <script src="popup.js"></script>
+  <script src="js/popup.js"></script>
 </body>
 </html>
